--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -8,9 +8,10 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
-# Created by newuser for 5.8
-export http_proxy="http://127.0.0.1:8889"
-export https_proxy=$http_proxy
+export EDITOR=nvim
+
+export http_proxy={{ .http_proxy | quote }}
+export https_proxy={{ .https_proxy | quote }}
 
 # for yarn
 export PATH=$PATH:~/.yarn/bin
