--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -29,7 +29,6 @@ fi
 
 # for bindkey
 bindkey -e
-
 SAVEHIST=10000
 HISTFILE=~/.zsh_history
 setopt INC_APPEND_HISTORY
@@ -76,3 +75,8 @@ export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init --path)"
 eval "$(pyenv init -)"
 eval "$(pyenv virtualenv-init -)"
+
+eval "$(direnv hook zsh)"
+
+# load go binary
+export PATH="$HOME/go/bin:$PATH"
