--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -15,6 +15,9 @@ export EDITOR=nvim
 export http_proxy={{ .http_proxy | quote }}
 export https_proxy={{ .https_proxy | quote }}
 
+# for dircolors
+test -r "~/.dir_colors" && eval $(dircolors ~/.dir_colors)
+
 # for yarn
 export PATH=$PATH:~/.yarn/bin
 
@@ -80,3 +83,6 @@ eval "$(direnv hook zsh)"
 
 # load go binary
 export PATH="$HOME/go/bin:$PATH"
+
+# gpg settings
+export SSH_AUTH_SOCK=$(gpgconf --list-dirs agent-ssh-socket)
